--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,37 +2,24 @@ version: '3.8'
 
 services:
     postgresql-master:
-        container_name: postgresql-master
-        image: bitnami/postgresql:latest
+        container_name: postgres-db-master
+        image: postgres:alpine
         volumes:
-            - ./postgresql-master:/bitnami/postgresql
+            - /path/to/postgresql-persistence:/bitnami/postgresql
         ports:
-            - "55432:5432"
+            - "5435:5432"
         environment:
-            - POSTGRESQL_REPLICATION_MODE=master
-            - POSTGRESQL_USERNAME=juanc
-            - POSTGRESQL_PASSWORD=jc952000
-            - POSTGRESQL_DATABASE=my_database
-            - POSTGRESQL_REPLICATION_USER=juanc
-            - POSTGRESQL_REPLICATION_PASSWORD=jc952000
+            - POSTGRES_PASSWORD=password-master
 
     postgresql-slave:
-        container_name: postgresql-slave
-        image: bitnami/postgresql:latest
+        container_name: postgres-db-replica
+        image: postgres:alpine
         ports:
-            - "65432:5432"
+            - "5434:5432"
         volumes:
             - ./postgresql-slave:/bitnami/postgresql
         environment:
-            - POSTGRESQL_REPLICATION_MODE=slave
-            - POSTGRESQL_USERNAME=juanc
-            - POSTGRESQL_PASSWORD=jc952000
-            - POSTGRESQL_MASTER_HOST=postgresql-master
-            - POSTGRESQL_MASTER_PORT_NUMBER=5432
-            - POSTGRESQL_REPLICATION_USER=juanc
-            - POSTGRESQL_REPLICATION_PASSWORD=jc952000
-        depends_on:
-            - postgresql-master
+            POSTGRES_PASSWORD=password-replica
 
 # volumes:
 #     postgres-db: 
